--- a/teekay-groceries/package.json
+++ b/teekay-groceries/package.json
@@ -11,6 +11,7 @@
     "popper.js": "^1.16.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
