--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://tazim04.github.io/tazim04.github.io",
+  "homepage": "https://tazim04.github.io/teekay-groceries",
   "name": "teekay-groceries",
   "version": "0.1.0",
   "private": true,
