--- a/package.json
+++ b/package.json
@@ -1,9 +1,5 @@
 {
-<<<<<<< HEAD
-  "homepage": "https://tazim04.github.io/tazim04.github.io",
-=======
   "homepage": "https://tazim04.github.io/teekay-groceries",
->>>>>>> parent of 16b758a (Updates)
   "name": "teekay-groceries",
   "version": "0.1.0",
   "private": true,
@@ -24,9 +20,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b main -d build",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
